# gigafile-rust-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE.md  README.md
.github/workflows/: release.yml
docs/: CHANGELOG.md  README.ja.md  README.zh.md
packaging/aur/: .SRCINFO  PKGBUILD
src/: cli.rs  config.rs  delete.rs  download.rs  error.rs  history.rs  http.rs  info.rs  interrupt.rs  jsonout.rs  lib.rs  main.rs  naming.rs  parts.rs  progress.rs  self_update.rs  timeutil.rs  upload.rs  urlinfo.rs
src/parser/: download.rs  landing.rs  mod.rs  size.rs
tests/: cli_completions.rs  cli_config_history.rs  cli_delete_parts.rs  cli_download.rs  cli_info.rs  cli_json.rs  cli_select.rs  cli_self_update.rs  cli_upload.rs  download_integration.rs  parser_fixtures.rs  upload_integration.rs
tests/fixtures/: matomete_empty.html  matomete_two_files.html  matomete_unicode.html  page_blocked.html  page_expired.html  page_needs_key.html  page_notfound.html  page_wrong_key.html  single_masked.html
tests/snapshots/: cli_json__snapshot_config_help.snap  cli_json__snapshot_config_init_help.snap  cli_json__snapshot_delete_help.snap  cli_json__snapshot_download_help.snap  cli_json__snapshot_gfile_help.snap  cli_json__snapshot_info_help.snap  cli_json__snapshot_json_info_needs_key.snap  cli_json__snapshot_json_info_single.snap  cli_json__snapshot_json_key_wrong_failure.snap  cli_json__snapshot_json_matomete_partial_failure.snap  cli_json__snapshot_json_parse_failure.snap  cli_json__snapshot_json_single_success.snap  cli_json__snapshot_json_size_mismatch_failure.snap  cli_json__snapshot_json_upload_success.snap  cli_json__snapshot_parts_clean_help.snap  cli_json__snapshot_parts_help.snap  cli_json__snapshot_parts_list_help.snap  cli_json__snapshot_rgfile_help.snap  cli_json__snapshot_upload_help.snap
