[package]
name = "gfile-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
repository = "https://github.com/Maymall/gfile-rust"
description = "A conservative Rust CLI for GigaFile public web uploads and downloads."

[lib]
name = "gfile_rust"
path = "src/lib.rs"

[[bin]]
name = "gfile"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
futures-util = "0.3.31"
indicatif = "0.17.11"
regex = "1.11.1"
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls", "cookies", "stream", "gzip"] }
rpassword = "7.4.0"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "fs", "io-util", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0.17"
insta = "1.43.1"
predicates = "3.1.3"
tempfile = "3.20.0"
# Pin wiremock because 0.6.5 uses let-chain syntax that requires Rust 1.88,
# while this project supports MSRV 1.85.
wiremock = "=0.6.3"
